# fcgs-software

./: CMakeLists.txt  README.md  code.txt  compile_commands.json
.cache/clangd/index/: datasource.cpp.0F1F307879D58A4C.idx  datasource.h.DF7D8DD771EA366F.idx  main.cpp.6AB15F1B6AADBE4A.idx  main_window.cpp.261793ABA9399BC2.idx  main_window.h.8F90361A8D2ED781.idx  moc_main_window.cpp.670B59216FA673DB.idx  mocs_compilation.cpp.423C4C11BD25CA6F.idx
.qwen/: settings.json
arduino_side/: FC-3_test_program.ino  arduino_side.ino  compile_and_upload.sh  telemetry_protocol.h
radio/arduino_side/: arduino_side.ino
radio/transmitter/: telemetry_protocol.h  transmitter.ino
receiver/: receiver.ino
src/: main.cpp
src/calibration/: calibrationcontroller.cpp  calibrationcontroller.h  magcalibrator.cpp  magcalibrator.h
src/datasource/: datapacket.h  datasource.cpp  datasource.h  serialreader.cpp  serialreader.h  telemetry_logger.cpp  telemetry_logger.h  telemetry_protocol.h
src/ui/: .main_window.cpp.swp  magcalibrationwidget.cpp  magcalibrationwidget.h  main_window.cpp  main_window.h  telemetry_3d_widget.cpp  telemetry_3d_widget.h  telemetry_chart_widget.cpp  telemetry_chart_widget.h  telemetry_messages_widget.cpp  telemetry_messages_widget.h  telemetry_values_widget.cpp  telemetry_values_widget.h  trajectory_widget.cpp  trajectory_widget.h
